@@ -2835,6 +2835,40 @@ name|Exception
 name|e
 parameter_list|)
 block|{
+comment|// The JVM likes to wrap our helpful SolrExceptions in things like
+comment|// "InvocationTargetException" that have no useful getMessage
+if|if
+condition|(
+literal|null
+operator|!=
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|&&
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|SolrException
+condition|)
+block|{
+name|SolrException
+name|inner
+init|=
+operator|(
+name|SolrException
+operator|)
+name|e
+operator|.
+name|getCause
+argument_list|()
+decl_stmt|;
+throw|throw
+name|inner
+throw|;
+block|}
 throw|throw
 operator|new
 name|SolrException
@@ -3036,6 +3070,40 @@ name|Exception
 name|e
 parameter_list|)
 block|{
+comment|// The JVM likes to wrap our helpful SolrExceptions in things like
+comment|// "InvocationTargetException" that have no useful getMessage
+if|if
+condition|(
+literal|null
+operator|!=
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|&&
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|SolrException
+condition|)
+block|{
+name|SolrException
+name|inner
+init|=
+operator|(
+name|SolrException
+operator|)
+name|e
+operator|.
+name|getCause
+argument_list|()
+decl_stmt|;
+throw|throw
+name|inner
+throw|;
+block|}
 throw|throw
 operator|new
 name|SolrException
