@@ -150,6 +150,19 @@ name|solr
 operator|.
 name|schema
 operator|.
+name|IndexSchema
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|schema
+operator|.
 name|SchemaField
 import|;
 end_import
@@ -228,6 +241,154 @@ argument_list|(
 literal|true
 argument_list|)
 decl_stmt|;
+comment|/**    * Gets and returns the {@link #VERSION_FIELD} from the specified     * schema, after verifying that it is indexed, stored, and single-valued.      * If any of these pre-conditions are not met, it throws a SolrException     * with a user suitable message indicating the problem.    */
+DECL|method|getAndCheckVersionField
+specifier|public
+specifier|static
+name|SchemaField
+name|getAndCheckVersionField
+parameter_list|(
+name|IndexSchema
+name|schema
+parameter_list|)
+throws|throws
+name|SolrException
+block|{
+specifier|final
+name|String
+name|errPrefix
+init|=
+name|VERSION_FIELD
+operator|+
+literal|"field must exist in schema, using indexed=\"true\" stored=\"true\" and multiValued=\"false\""
+decl_stmt|;
+name|SchemaField
+name|sf
+init|=
+name|schema
+operator|.
+name|getFieldOrNull
+argument_list|(
+name|VERSION_FIELD
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|sf
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|errPrefix
+operator|+
+literal|" ("
+operator|+
+name|VERSION_FIELD
+operator|+
+literal|" does not exist)"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+operator|!
+name|sf
+operator|.
+name|indexed
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|errPrefix
+operator|+
+literal|" ("
+operator|+
+name|VERSION_FIELD
+operator|+
+literal|" is not indexed"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+operator|!
+name|sf
+operator|.
+name|stored
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|errPrefix
+operator|+
+literal|" ("
+operator|+
+name|VERSION_FIELD
+operator|+
+literal|" is not stored"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|sf
+operator|.
+name|multiValued
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|errPrefix
+operator|+
+literal|" ("
+operator|+
+name|VERSION_FIELD
+operator|+
+literal|" is not multiValued"
+argument_list|)
+throw|;
+block|}
+return|return
+name|sf
+return|;
+block|}
 DECL|method|VersionInfo
 specifier|public
 name|VersionInfo
@@ -256,14 +417,12 @@ name|core
 decl_stmt|;
 name|versionField
 operator|=
+name|getAndCheckVersionField
+argument_list|(
 name|core
 operator|.
 name|getSchema
 argument_list|()
-operator|.
-name|getFieldOrNull
-argument_list|(
-name|VERSION_FIELD
 argument_list|)
 expr_stmt|;
 name|idField
