@@ -58,6 +58,56 @@ literal|"unset.sys.property"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testUpdateLogButNoVersionField
+specifier|public
+name|void
+name|testUpdateLogButNoVersionField
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// :TODO: neccessary until SOLR-3699 is fixed
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.directoryFactory"
+argument_list|,
+literal|"org.apache.solr.core.SimpleFSDirectoryFactory"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"enable.update.log"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|assertConfigs
+argument_list|(
+literal|"solrconfig.xml"
+argument_list|,
+literal|"schema12.xml"
+argument_list|,
+literal|"_version_"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"enable.update.log"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|testBogusScriptEngine
 specifier|public
 name|void
